tests/syntax_error/double_point5.jou
def foo() -> None:
    x = .5   # Error: expected an expression, got '.'
